perf: optimizar scroll vertical y detección de fin de catálogo en alimentos
- ensureVisibleByXpathNoClick: reemplaza slowSwipeUp+sleep(120) por swipeUpInMainContent(450) — recorrido 90%→10% pantalla, menos scrolls necesarios
- Detección de fin de catálogo con getPageSource(): break automático si el DOM no cambia tras scroll
- Métricas [Scroll] Swipe X/Y, Producto encontrado, Fin de catálogo detectado, Tiempo total búsqueda
- PromosGuard: implicitlyWait=0 en isMarioPromoVisible, isLocationChangePopupVisible, tryGenericOverlayDismiss — reducción estimada 80s→<10s cuando no hay overlays
- ensureCinemaSelectedFromAlimentos: isVisibleInstant + métricas [PERF] por etapa
- Flujo alimentos: [PERF] logs en seleccionarAlimentoAleatorio, completarPersonalizacion, abrirCarrito
- WAITS_REPORT.md: inventario de 190 ocurrencias de waits en 12 clases

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>